--- a/posts/math_I/function/exponent.qmd
+++ b/posts/math_I/function/exponent.qmd
@@ -49,7 +49,7 @@ categories: [수학, 지수의법칙, 중학교]
 ## 문제6.
 
 ::: {.callout-note title="$10^{-3} = ?$" collapse="true" appearance="minimal"}
-답= $\\frac{1}{1000}$
+답= $\frac{1}{10^3}$
 :::
 
 ---
@@ -57,7 +57,7 @@ categories: [수학, 지수의법칙, 중학교]
 ## 문제7.
 
 ::: {.callout-note title="$2 \times 3^2 \times 2^3 = ?$" collapse="true" appearance="minimal"}
-답= $2^4 \\cdot 3^2 = 16 \\cdot 9 = 144$
+답= $2^4 \times 3^2 = 16 \times 9 = 144$
 :::
 
 ---
@@ -102,16 +102,16 @@ categories: [수학, 지수의법칙, 중학교]
 
 ## 문제13.
 
-::: {.callout-note title="$\\frac{3^{-2}}{3^3 \\cdot 3^{-1}} = ?$" collapse="true" appearance="minimal"}
-답= $3^{-2 - 3 + 1} = 3^{-4} = \\frac{1}{81}$
+::: {.callout-note title="$\\frac{3^{-2}}{3^3 \times 3^{-1}} = ?$" collapse="true" appearance="minimal"}
+답= $3^{-2 - 3 + 1} = 3^{-4} = \frac{1}{81}$
 :::
 
 ---
 
 ## 문제14.
 
-::: {.callout-note title="$(4^3 \\cdot 2^2)^2 \\div (2^3 \\cdot 4)^3 = ?$" collapse="true" appearance="minimal"}
-답= $2^{12 + 4 - 9 - 3} = 2^4 = 16$
+::: {.callout-note title="$(4^3 \times 2^2)^2 \\div (2^3 \times 4)^3 = ?$" collapse="true" appearance="minimal"}
+답= $2^{12 + 4 - 9 - 6} = 2^1 = 2$
 :::
 
 ---
@@ -119,6 +119,6 @@ categories: [수학, 지수의법칙, 중학교]
 ## 문제15.
 
 ::: {.callout-note title="$(10^{-2} \\cdot 5^3)^2 \\div (2 \\cdot 5)^3 = ?$" collapse="true" appearance="minimal"}
-답= $10^{-4} \\cdot 5^6 \\div 2^3 \\cdot 5^3 = \\frac{5^3}{2^3 \\cdot 10^4} = \\frac{125}{8000} = \\frac{1}{64}$
+답= $10^{-4} \times 5^6 \div 2^3 \times 5^3 = \frac{5^3}{2^3 \times 10^4} = \frac{125}{8000} = \frac{1}{64}$
 :::
 
