--- a/posts/math_I/exponent/curriculum.qmd
+++ b/posts/math_I/exponent/curriculum.qmd
@@ -1,5 +1,5 @@
 ---
-title: "function"
+title: "지수/로그 학습목표"
 description: "2015 개정 교육과정 고등학교 수학과 과목 ('18~'24 高1)"
 date: "2024-12-21"
 modified-date: "2024-12-21"
@@ -25,8 +25,6 @@ categories: [수학, 수학I, 지수함수]
 -   지수함수
 
 -   로그함수
-
--   , ,
 
 #### 지수와 로그
 
