--- a/posts/math_I/exponent/day1.qmd
+++ b/posts/math_I/exponent/day1.qmd
@@ -1,6 +1,6 @@
 ---
-title: "지수의법칙 연습1"
-description: "중학교 수준의 지수의법칙 연습문제 20개"
+title: "지수의법칙 연습2"
+description: "중학교수준 연습문제 20개"
 date: "2024-12-25"
 modified-date: "2024-12-25"
 categories: [수학, 지수의법칙, 중학교]
@@ -8,7 +8,7 @@ categories: [수학, 지수의법칙, 중학교]
 
 ## 문제1.
 
-::: {.callout-note title="$\frac{5^{-2} \times 3^3}{15^{-1}} = ?$" collapse="true" appearance="minimal"}
+::: {.callout-note title="$\\frac{5^{-2} \\times 3^3}{15^{-1}} = ?$" collapse="true" appearance="minimal"}
 답= $3^4$
 
 풀이: $\frac{5^{-2} \times 3^3}{15^{-1}} = \frac{5^{-2} \times 3^3}{5^{-1} \times 3^{-1}} = 5^{-2 - (-1)} \times 3^{3 - (-1)} = 5^{-1} \times 3^4 = 3^4$
@@ -16,7 +16,7 @@ categories: [수학, 지수의법칙, 중학교]
 
 ## 문제2.
 
-::: {.callout-note title="$\left(2^{-3} \times 4^2\right) \div 8^{-1} = ?$" collapse="true" appearance="minimal"}
+::: {.callout-note title="$\\left(2^{-3} \\times 4^2\\right) \\div 8^{-1} = ?$" collapse="true" appearance="minimal"}
 답= $2^{-2}$
 
 풀이: $\left(2^{-3} \times 4^2\right) \div 8^{-1} = \frac{2^{-3} \times (2^2)^2}{2^{-3}} = \frac{2^{-3} \times 2^4}{2^{-3}} = 2^{-3 + 4 + 3} = 2^{-2}$
@@ -24,7 +24,7 @@ categories: [수학, 지수의법칙, 중학교]
 
 ## 문제3.
 
-::: {.callout-note title="$\frac{(3^{-1})^2}{9^{-1}} = ?$" collapse="true" appearance="minimal"}
+::: {.callout-note title="$\\frac{(3^{-1})^2}{9^{-1}} = ?$" collapse="true" appearance="minimal"}
 답= $3^{-2}$
 
 풀이: $\frac{(3^{-1})^2}{9^{-1}} = \frac{3^{-2}}{3^{-2}} = 3^{-2 + 2} = 3^{-2}$
@@ -32,7 +32,7 @@ categories: [수학, 지수의법칙, 중학교]
 
 ## 문제4.
 
-::: {.callout-note title="$\frac{a^{-2} \times b^3}{a^3 \times b^{-2}} = ?$" collapse="true" appearance="minimal"}
+::: {.callout-note title="$\\frac{a^{-2} \\times b^3}{a^3 \\times b^{-2}} = ?$" collapse="true" appearance="minimal"}
 답= $a^{-5}b^5$
 
 풀이: $\frac{a^{-2} \times b^3}{a^3 \times b^{-2}} = a^{-2 - 3} \times b^{3 - (-2)} = a^{-5}b^5$
@@ -40,7 +40,7 @@ categories: [수학, 지수의법칙, 중학교]
 
 ## 문제5.
 
-::: {.callout-note title="$\left(\frac{2}{3}\right)^{-2} \times \frac{9^{-1}}{4^{-1}} = ?$" collapse="true" appearance="minimal"}
+::: {.callout-note title="$\\left(\\frac{2}{3}\\right)^{-2} \\times \\frac{9^{-1}}{4^{-1}} = ?$" collapse="true" appearance="minimal"}
 답= $1$
 
 풀이: $\left(\frac{2}{3}\right)^{-2} \times \frac{9^{-1}}{4^{-1}} = \frac{3^2}{2^2} \times \frac{4}{9} = \frac{9}{4} \times \frac{4}{9} = 1$
@@ -48,7 +48,7 @@ categories: [수학, 지수의법칙, 중학교]
 
 ## 문제6.
 
-::: {.callout-note title="$\frac{x^{-1} \times y^{-3}}{z^2} \div x^2 y^2 = ?$" collapse="true" appearance="minimal"}
+::: {.callout-note title="$\\frac{x^{-1} \\times y^{-3}}{z^2} \\div x^2 y^2 = ?$" collapse="true" appearance="minimal"}
 답= $x^{-3}y^{-5}z^{-2}$
 
 풀이: $\frac{x^{-1} \times y^{-3}}{z^2} \div x^2 y^2 = \frac{x^{-1} \times y^{-3}}{z^2} \times x^{-2} y^{-2} = x^{-1 - 2} \times y^{-3 - 2} \times z^{-2} = x^{-3}y^{-5}z^{-2}$
@@ -56,7 +56,7 @@ categories: [수학, 지수의법칙, 중학교]
 
 ## 문제7.
 
-::: {.callout-note title="$\frac{2^{-4} \times 3^{-3}}{6^{-2}} = ?$" collapse="true" appearance="minimal"}
+::: {.callout-note title="$\\frac{2^{-4} \\times 3^{-3}}{6^{-2}} = ?$" collapse="true" appearance="minimal"}
 답= $2^{-2}3^{-1}$
 
 풀이: $\frac{2^{-4} \times 3^{-3}}{6^{-2}} = \frac{2^{-4} \times 3^{-3}}{(2 \times 3)^{-2}} = 2^{-4 - (-2)} \times 3^{-3 - (-2)} = 2^{-2} \times 3^{-1}$
@@ -64,7 +64,7 @@ categories: [수학, 지수의법칙, 중학교]
 
 ## 문제8.
 
-::: {.callout-note title="$\frac{5^3}{5^{-2} \times 25} = ?$" collapse="true" appearance="minimal"}
+::: {.callout-note title="$\\frac{5^3}{5^{-2} \\times 25} = ?$" collapse="true" appearance="minimal"}
 답= $1$
 
 풀이: $\frac{5^3}{5^{-2} \times 25} = \frac{5^3}{5^{-2} \times 5^2} = \frac{5^3}{5^0} = 1$
@@ -72,7 +72,7 @@ categories: [수학, 지수의법칙, 중학교]
 
 ## 문제9.
 
-::: {.callout-note title="$10^{-3} \div \left(2^{-1} \times 5^{-2}\right) = ?$" collapse="true" appearance="minimal"}
+::: {.callout-note title="$10^{-3} \\div \\left(2^{-1} \\times 5^{-2}\\right) = ?$" collapse="true" appearance="minimal"}
 답= $2 \times 5^{-1}$
 
 풀이: $10^{-3} \div \left(2^{-1} \times 5^{-2}\right) = 10^{-3} \times 2^1 \times 5^2 = (2 \times 5)^{-3} \times 2^1 \times 5^2 = 2^{1 - 3} \times 5^{2 - 3} = 2^1 \times 5^{-1}$
@@ -80,7 +80,7 @@ categories: [수학, 지수의법칙, 중학교]
 
 ## 문제10.
 
-::: {.callout-note title="$\frac{(a^2 b^{-3})^{-2}}{a^{-4} b^6} = ?$" collapse="true" appearance="minimal"}
+::: {.callout-note title="$\\frac{(a^2 b^{-3})^{-2}}{a^{-4} b^6} = ?$" collapse="true" appearance="minimal"}
 답= $a^{-4} b^{12}$
 
 풀이: $\frac{(a^2 b^{-3})^{-2}}{a^{-4} b^6} = \frac{a^{-4} b^6}{a^{-4} b^6} = a^{-4} b^{12}$
@@ -88,7 +88,7 @@ categories: [수학, 지수의법칙, 중학교]
 
 ## 문제11.
 
-::: {.callout-note title="$\frac{(2^{-1} \times 3^2)^3}{6^3 \times (4^{-1})^2} = ?$" collapse="true" appearance="minimal"}
+::: {.callout-note title="$\\frac{(2^{-1} \\times 3^2)^3}{6^3 \\times (4^{-1})^2} = ?$" collapse="true" appearance="minimal"}
 답= $1$
 
 풀이: $\frac{(2^{-1} \times 3^2)^3}{6^3 \times (4^{-1})^2} = \frac{(2^{-1} \times 3^2)^3}{(2^2 \times 3)^3} = \frac{2^{-3} \times 3^6}{2^6 \times 3^3} = 2^{-3 - 6} \times 3^{6 - 3} = 2^{-9} \times 3^3 = 1$
@@ -96,7 +96,7 @@ categories: [수학, 지수의법칙, 중학교]
 
 ## 문제12.
 
-::: {.callout-note title="$\frac{x^{-2} \times y^0}{\left(z^{-1}\right)^{-3}} \times z^{-2} = ?$" collapse="true" appearance="minimal"}
+::: {.callout-note title="$\\frac{x^{-2} \\times y^0}{\\left(z^{-1}\\right)^{-3}} \\times z^{-2} = ?$" collapse="true" appearance="minimal"}
 답= $x^{-2}z^{-5}$
 
 풀이: $\frac{x^{-2} \times y^0}{\left(z^{-1}\right)^{-3}} \times z^{-2} = \frac{x^{-2} \times 1}{z^3} \times z^{-2} = x^{-2} \times z^{-3 - 2} = x^{-2}z^{-5}$
@@ -104,7 +104,7 @@ categories: [수학, 지수의법칙, 중학교]
 
 ## 문제13.
 
-::: {.callout-note title="$\left(\frac{5^{-1} \times 2^{-3}}{10^{-2}}\right)^2 = ?$" collapse="true" appearance="minimal"}
+::: {.callout-note title="$\\left(\\frac{5^{-1} \\times 2^{-3}}{10^{-2}}\\right)^2 = ?$" collapse="true" appearance="minimal"}
 답= $2^{-2}$
 
 풀이: $\left(\frac{5^{-1} \times 2^{-3}}{10^{-2}}\right)^2 = \left(\frac{5^{-1} \times 2^{-3}}{5^{-2} \times 2^{-2}}\right)^2 = \left(5^{-1 - (-2)} \times 2^{-3 - (-2)}\right)^2 = \left(5^1 \times 2^{-1}\right)^2 = 5^2 \times 2^{-2} = 2^{-2}$
@@ -112,7 +112,7 @@ categories: [수학, 지수의법칙, 중학교]
 
 ## 문제14.
 
-::: {.callout-note title="$\frac{(a^{-1} b^2)^3}{a^3 b^{-4}} = ?$" collapse="true" appearance="minimal"}
+::: {.callout-note title="$\\frac{(a^{-1} b^2)^3}{a^3 b^{-4}} = ?$" collapse="true" appearance="minimal"}
 답= $a^{-6}b^{10}$
 
 풀이: $\frac{(a^{-1} b^2)^3}{a^3 b^{-4}} = \frac{a^{-3} \times b^6}{a^3 \times b^{-4}} = a^{-3 - 3} \times b^{6 - (-4)} = a^{-6} \times b^{10}$
@@ -120,7 +120,7 @@ categories: [수학, 지수의법칙, 중학교]
 
 ## 문제15.
 
-::: {.callout-note title="$\frac{\left(\frac{1}{2}\right)^{-3} \times 4^{-2}}{8^{-1}} = ?$" collapse="true" appearance="minimal"}
+::: {.callout-note title="$\\frac{\\left(\\frac{1}{2}\\right)^{-3} \\times 4^{-2}}{8^{-1}} = ?$" collapse="true" appearance="minimal"}
 답= $2^{-1}$
 
 풀이: $\frac{\left(\frac{1}{2}\right)^{-3} \times 4^{-2}}{8^{-1}} = \frac{2^3 \times (2^2)^{-2}}{2^{-3}} = \frac{2^3 \times 2^{-4}}{2^{-3}} = 2^{3 - 4 + 3} = 2^{-1}$
@@ -128,7 +128,7 @@ categories: [수학, 지수의법칙, 중학교]
 
 ## 문제16.
 
-::: {.callout-note title="$\frac{(3x^2 y^{-1})^3}{x^6 y^{-2} z^0} = ?$" collapse="true" appearance="minimal"}
+::: {.callout-note title="$\\frac{(3x^2 y^{-1})^3}{x^6 y^{-2} z^0} = ?$" collapse="true" appearance="minimal"}
 답= $3^3y^{-1}$
 
 풀이: $\frac{(3x^2 y^{-1})^3}{x^6 y^{-2} z^0} = \frac{3^3 \times x^6 \times y^{-3}}{x^6 \times y^{-2} \times 1} = 3^3 \times x^{6 - 6} \times y^{-3 - (-2)} = 3^3 \times y^{-1}$
@@ -136,7 +136,7 @@ categories: [수학, 지수의법칙, 중학교]
 
 ## 문제17.
 
-::: {.callout-note title="$\frac{2^{-3} \times 3^3}{6^{-2} \times (4^{-1})^2} = ?$" collapse="true" appearance="minimal"}
+::: {.callout-note title="$\\frac{2^{-3} \\times 3^3}{6^{-2} \\times (4^{-1})^2} = ?$" collapse="true" appearance="minimal"}
 답= $3^5$
 
 풀이: $\frac{2^{-3} \times 3^3}{6^{-2} \times (4^{-1})^2} = \frac{2^{-3} \times 3^3}{2^{-2} \times 3^{-2} \times 2^{-2}} = 2^{-3 - (-2) - (-2)} \times 3^{3 - (-2)} = 2^1 \times 3^5 = 3^5$
@@ -144,7 +144,7 @@ categories: [수학, 지수의법칙, 중학교]
 
 ## 문제18.
 
-::: {.callout-note title="$\left(\frac{1}{x^{-3} y^2}\right) \div x^4 y^{-5} = ?$" collapse="true" appearance="minimal"}
+::: {.callout-note title="$\\left(\\frac{1}{x^{-3} y^2}\\right) \\div x^4 y^{-5} = ?$" collapse="true" appearance="minimal"}
 답= $x^{-7}y^{7}$
 
 풀이: $\left(\frac{1}{x^{-3} y^2}\right) \div x^4 y^{-5} = x^3 y^{-2} \div x^4 y^{-5} = x^{3 - 4} \times y^{-2 - (-5)} = x^{-7} \times y^{7}$
@@ -152,7 +152,7 @@ categories: [수학, 지수의법칙, 중학교]
 
 ## 문제19.
 
-::: {.callout-note title="$\frac{(a^{-2} b^3)^2}{(a b^{-1})^4} = ?$" collapse="true" appearance="minimal"}
+::: {.callout-note title="$\\frac{(a^{-2} b^3)^2}{(a b^{-1})^4} = ?$" collapse="true" appearance="minimal"}
 답= $a^{-8}b^{14}$
 
 풀이: $\frac{(a^{-2} b^3)^2}{(a b^{-1})^4} = \frac{a^{-4} b^6}{a^4 b^{-4}} = a^{-4 - 4} \times b^{6 - (-4)} = a^{-8} \times b^{14}$
@@ -160,9 +160,8 @@ categories: [수학, 지수의법칙, 중학교]
 
 ## 문제20.
 
-::: {.callout-note title="$\frac{5^{-3} \times 2^{-2}}{\left(10^{-1}\right)^3 \div 2^{-1}} = ?$" collapse="true" appearance="minimal"}
+::: {.callout-note title="$\\frac{5^{-3} \\times 2^{-2}}{\\left(10^{-1}\\right)^3 \\div 2^{-1}} = ?$" collapse="true" appearance="minimal"}
 답= $1$
 
 풀이: $\frac{5^{-3} \times 2^{-2}}{\left(10^{-1}\right)^3 \div 2^{-1}} = \frac{5^{-3} \times 2^{-2}}{10^{-3} \times 2^1} = \frac{5^{-3} \times 2^{-2}}{(2 \times 5)^{-3} \times 2^1} = 5^{-3 - (-3)} \times 2^{-2 - (-3) - 1} = 5^0 \times 2^0 = 1$
 :::
-
