--- a/posts/math_I/exponent/exponent.qmd
+++ b/posts/math_I/exponent/exponent.qmd
@@ -1,6 +1,6 @@
 ---
-title: "지수의 법칙 문제"
-description: "중학교 개념"
+title: "지수의 법칙 연습1"
+description: "중학교수준 연습문제 15문제"
 date: "2024-12-21"
 modified-date: "2024-12-21"
 categories: [수학, 지수의법칙, 중학교]
@@ -12,7 +12,7 @@ categories: [수학, 지수의법칙, 중학교]
 답= $2^7$
 :::
 
----
+------------------------------------------------------------------------
 
 ## 문제2.
 
@@ -20,7 +20,7 @@ categories: [수학, 지수의법칙, 중학교]
 답= $5^4$
 :::
 
----
+------------------------------------------------------------------------
 
 ## 문제3.
 
@@ -28,15 +28,15 @@ categories: [수학, 지수의법칙, 중학교]
 답= $3^6$
 :::
 
----
+------------------------------------------------------------------------
 
 ## 문제4.
 
-::: {.callout-note title="$2^4 \times 2^3 \\div 2^2 = ?$" collapse="true" appearance="minimal"}
+::: {.callout-note title="$2^4 \\times 2^3 \\div 2^2 = ?$" collapse="true" appearance="minimal"}
 답= $2^5$
 :::
 
----
+------------------------------------------------------------------------
 
 ## 문제5.
 
@@ -44,7 +44,7 @@ categories: [수학, 지수의법칙, 중학교]
 답= $1$
 :::
 
----
+------------------------------------------------------------------------
 
 ## 문제6.
 
@@ -52,15 +52,15 @@ categories: [수학, 지수의법칙, 중학교]
 답= $\frac{1}{10^3}$
 :::
 
----
+------------------------------------------------------------------------
 
 ## 문제7.
 
-::: {.callout-note title="$2 \times 3^2 \times 2^3 = ?$" collapse="true" appearance="minimal"}
+::: {.callout-note title="$2 \\times 3^2 \\times 2^3 = ?$" collapse="true" appearance="minimal"}
 답= $2^4 \times 3^2 = 16 \times 9 = 144$
 :::
 
----
+------------------------------------------------------------------------
 
 ## 문제8.
 
@@ -68,7 +68,7 @@ categories: [수학, 지수의법칙, 중학교]
 답= $4^3 = 64$
 :::
 
----
+------------------------------------------------------------------------
 
 ## 문제9.
 
@@ -76,7 +76,7 @@ categories: [수학, 지수의법칙, 중학교]
 답= $2^{6 - 4} = 2^2 = 4$
 :::
 
----
+------------------------------------------------------------------------
 
 ## 문제10.
 
@@ -86,11 +86,11 @@ categories: [수학, 지수의법칙, 중학교]
 
 ## 문제11.
 
-::: {.callout-note title="$(2^3 \times 3^2)^2 \\div 2^4 = ?$" collapse="true" appearance="minimal"}
+::: {.callout-note title="$(2^3 \\times 3^2)^2 \\div 2^4 = ?$" collapse="true" appearance="minimal"}
 답= $2^{6 - 4} \times 3^4 = 2^2 \times 81 = 4 \times 81 = 324$
 :::
 
----
+------------------------------------------------------------------------
 
 ## 문제12.
 
@@ -98,27 +98,26 @@ categories: [수학, 지수의법칙, 중학교]
 답= $5^{6 - 4 - 1} = 5^1 = 5$
 :::
 
----
+------------------------------------------------------------------------
 
 ## 문제13.
 
-::: {.callout-note title="$\\frac{3^{-2}}{3^3 \times 3^{-1}} = ?$" collapse="true" appearance="minimal"}
+::: {.callout-note title="$\\frac{3^{-2}}{3^3 \\times 3^{-1}} = ?$" collapse="true" appearance="minimal"}
 답= $3^{-2 - 3 + 1} = 3^{-4} = \frac{1}{81}$
 :::
 
----
+------------------------------------------------------------------------
 
 ## 문제14.
 
-::: {.callout-note title="$(4^3 \times 2^2)^2 \\div (2^3 \times 4)^3 = ?$" collapse="true" appearance="minimal"}
+::: {.callout-note title="$(4^3 \\times 2^2)^2 \\div (2^3 \\times 4)^3 = ?$" collapse="true" appearance="minimal"}
 답= $2^{12 + 4 - 9 - 6} = 2^1 = 2$
 :::
 
----
+------------------------------------------------------------------------
 
 ## 문제15.
 
 ::: {.callout-note title="$(10^{-2} \\cdot 5^3)^2 \\div (2 \\cdot 5)^3 = ?$" collapse="true" appearance="minimal"}
-답= $10^{-4} \times 5^6 \div 2^3 \times 5^3 = \frac{5^3}{2^3 \times 10^4} = \frac{125}{8000} = \frac{1}{64}$
+답= $10^{-4} \times 5^6 \div 2^3 \times 5^3 = \frac{5^9}{2^3 \times 10^4} = \frac{5^9}{2^3 \times 2^4 \times 5^4} = \frac{5^5}{2^7}$
 :::
-
