--- a/posts/middle/operation/least_common_multiple.qmd
+++ b/posts/middle/operation/least_common_multiple.qmd
@@ -1,8 +1,8 @@
 ---
 title: "최소공배수"
 description: "최소공배수의 성질을 이해하고, 이를 구할 수 있다."
-date: "2024-12-28"
-modified-date: "2024-12-28"
+date: "2024-12-30"
+date-modified: "2024-12-30"
 categories: [수학, 중학교, 최소공배수]
 ---
 
@@ -21,6 +21,7 @@ $$
 $$
 최소공배수는 나눗셈 과정에 사용된 소인수와 남은 수를 모두 곱합니다.
 따라서, $2 \times 3 \times 3 \times 4 = 72$입니다.
+:::
 
 
 
