--- a/posts/math_I/exponent/exercise1.qmd
+++ b/posts/math_I/exponent/exercise1.qmd
@@ -2,7 +2,7 @@
 title: "지수의 법칙 연습1"
 description: "중학교수준 연습문제 15문제"
 date: "2024-12-21"
-modified-date: "2024-12-21"
+date-modified: "2024-12-21"
 categories: [수학, 지수의법칙, 중학교]
 ---
 
