--- a/posts/math_I/exponent/exercise4.qmd
+++ b/posts/math_I/exponent/exercise4.qmd
@@ -2,7 +2,7 @@
 title: "지수의법칙 연습4"
 description: "중학교 수준의 지수의법칙 연습문제 20개"
 date: "2024-12-28"
-modified-date: "2024-12-28"
+date-modified: "2024-12-28"
 categories: [수학, 지수의법칙, 중학교]
 ---
 
