--- a/posts/I/exponent_log_function/learning_objective.qmd
+++ b/posts/I/exponent_log_function/learning_objective.qmd
@@ -1,43 +1,86 @@
 ---
 title: "학습목표"
-description: "2015 개정  -  수학I  -  지수함수와 로그함수"
+description: "수학I  -  지수함수와 로그함수  -  2015년 개정"
 date: "2025-01-18"
 date-modified: "2025-01-18"
-categories: [수학I, 지수함수와 로그함수, 학습목표]
+categories: [수학I, 지수함수와 로그함수, 학습목표, 2015년 개정]
+toc-depth: 4
 ---
 
-## 지수와 로그
--   거듭제곱과 거듭제곱근의 뜻을 알고, 그 성질을 이해한다.
--   지수가 유리수, 실수까지 확장될 수 있음을 이해한다.
+### 지수함수와 로그함수
+
+지수함수는 빠르게 증가하거나 감소하는 수량이나 현상을 다루는 데 유용한 함수이고, 로그함수는 지수함수의 역함수이다.
+지수함수와 로그함수는 자연 현상이나 사회 현상을 설명하고 분석하기 위한 수학적 모델이다.
+
+#### 1. 지수와 로그
+
+-   \[12수학Ⅰ01-01\]거듭제곱과 거듭제곱근의 뜻을 알고, 그 성질을 이해한다.
+-   \[12수학Ⅰ01-02\]지수가 유리수, 실수까지 확장될 수 있음을 이해한다.
+-   \[12수학Ⅰ01-03\]지수법칙을 이해하고, 이를 이용하여 식을 간단히 나타낼 수 있다.
+-   \[12수학Ⅰ01-04\]로그의 뜻을 알고, 그 성질을 이해한다.
+-   \[12수학Ⅰ01-05\]상용로그를 이해하고, 이를 활용할 수 있다.
+
+#### 2. 지수함수와 로그함수
+
+-   \[12수학Ⅰ01-06\]지수함수와 로그함수의 뜻을 안다.
+-   \[12수학Ⅰ01-07\]지수함수와 로그함수의 그래프를 그릴 수 있고, 그 성질을 이해한다.
+-   \[12수학Ⅰ01-08\]지수함수와 로그함수를 활용하여 문제를 해결할 수 있다.
+
+### 학습요소
+
+-   거듭제곱근
+-   로그
+-   (로그의) 밑
+-   진수
+-   상용로그
+-   지수함수
+-   로그함수
+-   $\sqrt[n]{a}$
+-   $log_aN$
+-   $logN$
+
+### 교수･학습 방법 및 유의 사항
+
 -   지수가 유리수 및 실수인 경우는 밑이 양수인 조건이 필요함을 이해하게 한다.
--   지수법칙을 이해하고, 이를 이용하여 식을 간단히 나타낼 수 있다.
--   로그의 뜻을 알고, 그 성질을 이해한다.
--   상용로그를 이해하고, 이를 활용할 수 있다.
-
-## 지수함수와 로그함수
--   지수함수와 로그함수의 뜻을 안다.
--   지수함수와 로그함수의 그래프를 그릴 수 있고, 그 성질을 이해한다.
+-   지수가 실수인 경우는 직관적으로 다룬다.
+-   로그의 성질은 지수의 성질과 관련지어 이해하게 한다.
 -   지수함수와 로그함수는 역함수 관계임을 그래프를 통해 확인하게 한다.
--   지수함수와 로그함수를 활용하여 문제를 해결할 수 있다.
--   구체적인 자연 현상이나 사회 현상을 지수함수와 로그함수로 표현하고 이 과정에서 나타나는 간단한 방정식과 부등식을 풀어 문제를 해결해봄으로써 지수함수와 로그함수의 유용성과 가치를 인식할 수 있다.
+-   지수와 로그 및 지수함수와 로그함수를 다룰 때 공학적 도구를 이용할 수 있다.
+-   구체적인 자연 현상이나 사회 현상을 지수함수와 로그함수로 표현하고 이 과정에서 나타나는 간단한 방정식과 부등식을 풀어 문제를 해결해봄으로써 지수함수와 로그함수의 유용성과 가치를 인식하게 한다.
 
-##  사전 학습
-- 중1수학
-    - 수와 연산
-        - `정수와 유리수` 단원에서 유리수의 정의를 이해하고 계산할 수 있어야 한다.    
-        - `제곱근과 실수` 단원에서 제곱근과 실수의 정의를 이해하고 근호를 포함한 식의 사칙계산을 할 수 있어야 한다.
+### 평가 방법 및 유의 사항
 
-- 중2수학
-    - 문자와 식
-        - `식의 계산` 단원에서 `지수의 법칙`을 이해하고, 계산할 수 있어야 한다.
-    - 함수
-        - `일차함수와 그래프` 단원에서 `함수`의 정의를 이해하고, 일차함수의 특징을 이해하고 예시 그래프를 그릴 수 있어야 한다.
-        - `이차함수와 그래프` 단원에서 이차함수의 특징을 이해하고 예시 그래프를 그릴 수 있어야 한다.        
-        
-- 중3수학
-    - 실수와 그 계산
-      - `제곱근`을 계산할 수 있어야 한다.
-      
-- 공통수학(=수상+수하)
-    - 함수와 그래프
-      - `역함수`의 개념을 이해하고, 예시 그래프를 그릴 수 있어야 한다.      
+-   지수와 로그의 성질에 대한 평가에서는 지수와 로그의 기본 성질을 이해하고 활용할 수 있는 능력을 평가하는 데 중점을 두고, 지나치게 복잡한 계산을 포함하는 문제는 다루지 않는다.
+
+### 사전 학습
+
+#### 중1수학
+
+1.  수와 연산
+
+-   `정수와 유리수` 단원에서 유리수의 정의를 이해하고 계산할 수 있어야 한다.
+
+#### 중2수학
+
+2.  문자와 식
+
+-   `식의 계산` 단원에서 지수의 법칙을 이해하고, 계산할 수 있어야 한다.
+
+3.  함수
+
+-   `일차함수와 그래프` 단원에서 함수의 정의를 이해하고, 일차함수의 특징을 이해하고 예시 그래프를 그릴 수 있어야 한다.
+
+#### 중3수학
+
+1.  수와 연산
+
+-   `제곱근과 실수` 단원에서 제곱근과 실수의 정의를 이해하고 근호를 포함한 식의 사칙계산을 할 수 있어야 한다.
+
+3.  함수
+
+-   `이차함수와 그래프` 단원에서 이차함수의 특징을 이해하고 예시 그래프를 그릴 수 있어야 한다.
+
+#### 공통수학
+
+4.  함수와 그래프
+-   `역함수`의 개념을 이해하고, 예시 그래프를 그릴 수 있어야 한다.
