--- a/posts/I/trigonometric_function/learning_objective.qmd
+++ b/posts/I/trigonometric_function/learning_objective.qmd
@@ -1,15 +1,21 @@
 ---
 title: "학습목표"
-description: "2015 개정  -  수학I  -  삼각함수"
+description: "수학I  -  삼각함수  -  2015년 개정"
 date: "2025-01-18"
 date-modified: "2025-01-18"
-categories: [수학I, 삼각함수, 학습목표]
+categories: [수학I, 삼각함수, 학습목표, 2015년 개정]
+toc-depth: 4
 ---
 
-## Ⅱ. 삼각함수
+### 삼각함수
+삼각함수는 삼각비를 일반화시킨 개념으로, 자연 현상이나 사회 현상 가운데 나타나는 주기적인 현상을 수학적으로 표현하여 설명하고 분석할 수 있는 유용한 주기함수이다. 사인법칙과 코사인법칙을 포함한 삼각함수의 성질은 삼각형으로 나타낼 수 있는 대상의 길이, 넓이, 각도 등의 측정과 관련된 다양한 문제의 해결에 활용된다. 
 
-### ● 용어
+#### 1. 삼각함수
+- [12수학Ⅰ02-01]일반각과 호도법의 뜻을 안다.
+- [12수학Ⅰ02-02]삼각함수의 뜻을 알고, 사인함수, 코사인함수, 탄젠트함수의 그래프를 그릴 수 있다.
+- [12수학Ⅰ02-03]사인법칙과 코사인법칙을 이해하고, 이를 활용할 수 있다.
 
+### 학습요소
 -   시초선
 -   동경
 -   일반각
@@ -23,36 +29,40 @@ categories: [수학I, 삼각함수, 학습목표]
 -   삼각함수
 -   주기
 -   주기함수
--   (\sin x), (\cos x), (\tan x)
+-   ($\sin x$)
+- ($\cos x$)
+- ($\tan x$)
 
-### 학습 목표
 
-1.  **일반각**과 **호도법**의 뜻을 이해한다.
-2.  **삼각함수**의 뜻을 알고, **사인함수**, **코사인함수**, **탄젠트함수**의 그래프를 그릴 수 있다.
-3.  **사인 법칙**과 **코사인 법칙**을 이해하고 이를 활용할 수 있다.
+### 교수･학습 방법 및 유의사항
 
-------------------------------------------------------------------------
+- 삼각함수의 개념은 중학교에서 학습한 삼각비와 연계하여 이해하게 한다.
+- 삼각함수의 성질은 삼각함수의 그래프의 성질을 이해하는 데 필요한 정도로 간단히 다룬다.
+- 삼각함수의 그래프를 그리거나 삼각함수와 관련된 문제를 해결할 때 공학적 도구를 이용할 수 있다. - 사인법칙과 코사인법칙을 이용하여 삼각형의 각의 크기와 변의 길이 사이의 관계를 이해하고 삼각형의 넓이를 다양한 방법으로 구할 수 있게 한다. 
+- 사인법칙과 코사인법칙을 활용하여 여러 가지 문제를 해결해봄으로써 삼각함수의 유용성과 가치를 인식하게 한다. 
+- 삼각함수가 포함된 방정식과 부등식은 삼각함수의 그래프를 해석하거나 사인법칙과 코사인법칙을 활용하여 문제를 해결하는 과정에서 나타나는 간단한 경우만 다루되, 주어진 구간 안에서 해를 구하는 것만 다룬다. 
 
-### \<교수･학습 및 평가 방법 유의사항\>
+### 평가 방법 및 유의 사항
+- 삼각함수와 그 그래프의 성질에 대한 평가에서는 기본적인 삼각함수의 그래프와 그 성질에 대한 이해 능력을 평가하는 데 중점을 두고, 복잡한 합성함수나 절댓값이 여러 개 포함된 함수와 같이 지나치게 복잡한 삼각함수를 포함하는 문제는 다루지 않는다. 
 
-1.  **중학교 수학과 연계**
-    -   삼각함수의 개념은 중학교에서 학습한 삼각비와 연계하여 이해하도록 한다.
-2.  **그래프 성질 간단히 다룸**
-    -   삼각함수의 성질은 삼각함수 그래프의 성질을 이해하는 데 필요한 정도로 간단히 다룬다.
-3.  **공학적 도구 활용**
-    -   삼각함수의 그래프를 그리거나 관련 문제를 해결할 때 **공학적 도구**를 사용할 수 있다.
-4.  **사인법칙과 코사인법칙 활용**
-    -   **사인법칙**과 **코사인법칙**을 활용하여 다음을 이해하도록 한다:
-        -   삼각형의 각 크기와 변의 길이 간의 관계
-        -   삼각형의 넓이를 구하는 다양한 방법
-5.  **문제 해결 중심 학습**
-    -   사인법칙과 코사인법칙을 활용하여 여러 가지 문제를 해결해보며 삼각함수의 유용성과 가치를 인식하게 한다.
-6.  **방정식과 부등식**
-    -   삼각함수가 포함된 **방정식**과 **부등식**은 다음의 경우만 다룬다:
-        -   삼각함수의 그래프 해석 또는 사인법칙과 코사인법칙 활용 과정에서 나타나는 **간단한 경우**
-        -   주어진 구간 안에서 해를 구하는 문제
-7.  **평가 유의사항**
-    -   기본적인 삼각함수의 그래프와 성질에 대한 이해를 평가하는 데 중점을 둔다.
-    -   복잡한 **합성함수**나 **절댓값**이 여러 개 포함된 함수처럼 지나치게 복잡한 삼각함수 문제는 다루지 않는다.
+### 사전 학습
 
-------------------------------------------------------------------------
+#### 중2수학
+
+3.  함수
+
+-   `일차함수와 그래프` 단원에서 함수의 정의를 이해하고, 일차함수의 특징을 이해하고 예시 그래프를 그릴 수 있어야 한다.
+
+#### 중3수학
+
+3.  함수
+
+-   `이차함수와 그래프` 단원에서 이차함수의 특징을 이해하고 예시 그래프를 그릴 수 있어야 한다.
+
+4. 기하
+-   `삼각비` 단원에서 삼각비의 뜻을 알고, 삼각비의 값을 구할 수 있어야 한다.
+
+#### 공통수학
+
+4.  함수와 그래프
+-   `역함수`의 개념을 이해하고, 예시 그래프를 그릴 수 있어야 한다.
