--- a/posts/middle3/trigonometric_ratio/learning_objective.qmd
+++ b/posts/middle3/trigonometric_ratio/learning_objective.qmd
@@ -1,11 +1,12 @@
 ---
 title: "학습목표"
-description: "2015년 개정 - 중3수학 - 삼각비"
+description: "중3수학  -  삼각비  -  2015년 개정"
 date: "2024-12-28"
 date-modified: "2024-12-28"
-categories: [중3수학, 삼각비, 학습목표]
+categories: [중3수학, 삼각비, 학습목표, 2015년 개정]
+toc-depth: 4
 ---
 
-### 8. 삼각비
-[9수04-17]삼각비의 뜻을 알고, 간단한 삼각비의 값을 구할 수 있다.
-[9수04-18]삼각비를 활용하여 여러 가지 문제를 해결할 수 있다.
+### 삼각비
+- [9수04-17]삼각비의 뜻을 알고, 간단한 삼각비의 값을 구할 수 있다.
+- [9수04-18]삼각비를 활용하여 여러 가지 문제를 해결할 수 있다.
